added article section and section tab classes to portfolio. edited navbar

--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -1,12 +1,29 @@
 .header-nav {
-    background-color: lightskyblue;
+    background-color: white;
     color: black;
-    border-bottom: 2px solid black;
+    border-bottom: 3px solid black;
+    box-shadow: 2px black;
+    width: 100%;
+    display: flex;
+    padding: 1%;
 }
 
 .navtab {
     margin-left: 3%;
-    padding-top: 10px;
+    color: black;
+    align-self: center;
+}
+
+.header-main {
+    font-family: 'Montserrat', sans-serif;
+    align-self: center;
+    color: black;
+    font-size: 2em;
+    letter-spacing: 0.01em;
+    text-shadow: -1px 0 silver, 0 1px silver, 1px 0 silver, 0 -1px silver;
+}
+
+.header-main:hover {
     color: black;
 }
 
@@ -24,12 +41,12 @@
 
 .intro-text {
     height: 20%;
-    font-size: 30px;
+    font-size: 1.75rem;
 }
 
 .description-text {
     height: 80%;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .image-holder {
