--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -28,20 +28,29 @@
 }
 
 .main-body {
-    height: 881px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+    height: 100%;
+    padding: 1.5%;
 }
 
 .text-area {
-    height: 100%;
-    width: 65%;
-    float: left;
-    padding: 10%;
-    padding-top: 7%;
+    display: flex;
+    width: 1100px;
+    padding: 5%;
+    border: 1px solid black;
+    align-self: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .intro-text {
     height: 20%;
     font-size: 1.75rem;
+    margin-bottom: 5%;
 }
 
 .description-text {
@@ -50,15 +59,15 @@
 }
 
 .image-holder {
-    width: 35%;
-    height: 100%;
-    float: left;
+    border: 1px solid black;
+    display: flex;
+    width: 500px;
+    justify-content: center;
+    align-items: center;
 }
 
 .image-slot {
-    position: relative;
-    top: 13%;
-    margin: auto;
+
 }
 
 .headshot {
