--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -1,37 +1,43 @@
 .header-nav {
-    background-color: white;
-    color: black;
-    border-bottom: 3px solid black;
+    border-bottom: 1px solid silver;
     box-shadow: 2px black;
     width: 100%;
     display: flex;
-    padding: 1%;
+    padding: 1.5%;
+    background-color: rgb(49, 49, 49);
 }
 
 .navtab {
-    margin-left: 3%;
-    color: black;
+    margin-left: 5%;
+    color: white;
     align-self: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2em;
 }
 
 .header-main {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cinzel', serif;
     align-self: center;
-    color: black;
+    color: white;
     font-size: 2em;
     letter-spacing: 0.01em;
-    text-shadow: -1px 0 silver, 0 1px silver, 1px 0 silver, 0 -1px silver;
+}
+
+.header-button {
+    background-color: transparent;
+    color: white;
+    border-radius: 3px;
+    padding: 5px;
 }
 
 .header-main:hover {
-    color: black;
+    color: white;
 }
 
 .main-body {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    flex-wrap: wrap-reverse;
     width: 100%;
     height: 100%;
     padding: 1.5%;
@@ -59,17 +65,50 @@
 }
 
 .image-holder {
-    border: 1px solid black;
     display: flex;
     width: 500px;
     justify-content: center;
     align-items: center;
 }
 
-.image-slot {
-
-}
-
 .headshot {
     border-radius: 25px;
+    width: 100%;
+    height: auto;
 }
+
+
+@media screen and (max-width: 520px) {
+    .header-nav {
+        justify-content: center;
+        flex-direction: column;
+        padding-right: 10%;
+      }
+
+    .header-main {
+        font-size: 1.5em;
+    }
+
+    .navtab {
+        margin-left: 0%;
+        font-size: 1em;
+        letter-spacing: 0.05em;
+    }
+}
+
+@media screen and (max-width: 757px) {
+    .header-button {
+        border: transparent;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .main-body {
+        flex-wrap: wrap-reverse;
+    }
+
+    .intro-text {
+        text-align: center;
+    }
+}
+
