--- a/assets/css/worksstyle.css
+++ b/assets/css/worksstyle.css
@@ -1,30 +1,29 @@
 .header-nav {
-    background-color: white;
-    color: black;
-    border-bottom: 1px solid silver;
     box-shadow: 2px black;
     width: 100%;
     display: flex;
-    padding: 1%;
+    padding: 1.5%;
+    background-color: rgb(49, 49, 49);
 }
 
 .navtab {
-    margin-left: 3%;
-    color: black;
+    margin-left: 5%;
+    color: white;
     align-self: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2em;
 }
 
 .header-main {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cinzel', serif;
     align-self: center;
-    color: black;
+    color: white;
     font-size: 2em;
     letter-spacing: 0.01em;
-    text-shadow: -1px 0 silver, 0 1px silver, 1px 0 silver, 0 -1px silver;
 }
 
 .header-main:hover {
-    color: black;
+    color: white;
 }
 
 .image-holder {
@@ -40,7 +39,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: navy;
+    background-color: rgb(49, 49, 49);
 }
 
 .sidebar-left {
@@ -96,4 +95,22 @@
 .headline:hover {
     text-decoration: none;
     color: black;
+}
+
+@media screen and (max-width: 520px) {
+    .header-nav {
+        justify-content: center;
+        flex-direction: column;
+        padding-right: 10%;
+      }
+
+    .header-main {
+        font-size: 1.5em;
+    }
+
+    .navtab {
+        margin-left: 0%;
+        font-size: 1em;
+        letter-spacing: 0.05em;
+    }
 }
