--- a/assets/css/legacystyle.css
+++ b/assets/css/legacystyle.css
@@ -1,11 +1,3 @@
-body {
-    background: url("../images/wideprof.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
 .header-nav {
     border-bottom: 1px solid silver;
     box-shadow: 2px black;
@@ -42,6 +34,19 @@ body {
     color: white;
 }
 
+.main-body {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    padding: 1.5%;
+    color: white;
+    background-image: url("../images/wideprof.jpg");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .text-area {
     display: flex;
     width: 1100px;
@@ -50,8 +55,6 @@ body {
     align-self: center;
     justify-content: center;
     flex-direction: column;
-    color: white;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .intro-text {
