--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(
         rgba(0, 0, 0, 0.45),
         rgba(0, 0, 0, 0.45)
-      ), url("../images/wideprof.jpg") no-repeat center center fixed;
+      ), url("../images/wideprof.png") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
