--- a/assets/css/aboutstyle.css
+++ b/assets/css/aboutstyle.css
@@ -1,3 +1,8 @@
+.body {
+    background-color: whitesmoke;
+    height: 100%;
+}
+
 .header-nav {
     box-shadow: 2px black;
     width: 100%;
@@ -37,6 +42,47 @@
 
 .header-main:hover {
     color: white;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    background-size: cover;
+    padding: 3%;
+    background-color: white;
+}
+
+.image-slot {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    padding: 2%;
+    background-color: silver;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.headshot {
+    border: 2px solid whitesmoke;
+    border-radius: 5px;
+    width: auto;
+    height: 600px;
+}
+
+.text-slot {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    background-color: white;
+    padding: 2%;
+    border: 4px solid silver;
+    border-radius: 0px 5px 5px 0px;
+} 
+
+.text-slot p {
+    font-size: 1.2em;
+    font-family: 'Lusitana', serif;
 }
 
 @media screen and (max-width: 520px) {
