--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -71,28 +71,29 @@ body {
 }
 
 .intro-title {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Lusitana', serif;
     font-size: 2.3em;
     letter-spacing: 0.025em;
 }
 
 .intro-description {
-    font-family: 'Merienda', cursive;
+    font-family: 'Lusitana', serif;
     font-size: 0.7em;
-    border-bottom: 2px solid white;
+    text-decoration: underline;
 }
 
 .description-text {
     height: 80%;
-    font-size: 1.3em;
-    font-family: 'Lato', sans-serif;
+    font-size: 1.5em;
+    font-family: 'Lusitana', serif;
+    font-weight: 590;
 }
 
 .pop-out {
     font-family: 'Lusitana', serif;
-    font-size: 1.5em;
+    font-size: 1.6em;
     font-weight: bold;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.075em;
 }
 
 .pop-out:hover {
