chose basic color scheme

--- a/assets/css/worksstyle.css
+++ b/assets/css/worksstyle.css
@@ -8,7 +8,8 @@
     width: 100%;
     display: flex;
     padding: 1.5%;
-    background-color: #3A66A7;
+    background-color: #1D3557;
+    border-bottom: 2px solid #457B9D;
 }
 
 .navtab {
@@ -41,32 +42,29 @@
 }
 
 .top-container {
+    margin: 3% 0%;
+    padding: 1%;
     width: 100%;
     display: flex;
-    flex-direction: row;
-}
-
-.left-slot, .right-slot {
-    display: flex;
+    flex-direction: column;
+    background-color: white;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    height: 100%;
-    border: 2px solid lavender;
-    height: 500px;
-    margin: 1%;
+    border-top: 2px solid #457B9D;
+    border-bottom: 2px solid #457B9D;
 }
 
-.left-slot p {
-    font-size: 3em;
+.top-container h1 {
     font-family: 'Lusitana', serif;
-    padding: 10%;
+    font-size: 2em;
 }
 
-.right-slot p {
-    font-size: 1.5em;
+.top-container p {
     font-family: 'Lusitana', serif;
-    padding: 10%;
+    text-align: center;
+    font-size: 1.3em;
+    padding: 0% 20%;
+
 }
 
 .bottom-container {
@@ -74,15 +72,15 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: transparent;
-    border: 1px solid silver;
-    background-color: lavender;
+    background-color: white;
+    padding: 1%;
+    border-bottom: 2px solid #32213A;
 }
 
 .whole-card {
-    margin: 10px;
     display: flex;
-    border: 1px solid black;
+    border-radius: 0px;
+    margin: 2px;
 }
 
 .whole-card:hover {
@@ -97,17 +95,19 @@
 
 .card-body-section {
     border-top: 1px solid lavender;
-    background-color: #3A66A7;
+    background-color: #909CC2;
     display: flex;
     align-items: center;
+    justify-content: center;
+    color: white;
 }
 
 .card-headline {
-    font-family: 'Lusitana', serif; 
-    /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
-    color: white; 
+    font-family: 'Dhurjati', sans-serif;
+    color: black; 
     font-weight: 600; 
-    font-size: 1.4em;
+    font-size: 1.6em;
+    letter-spacing: 0.05em;
 }
 
 @media screen and (max-width: 520px) {
