--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -82,6 +82,34 @@ body {
     text-decoration: underline;
 }
 
+.icon-holder {
+    margin-top: 30px;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 30%;
+    margin-right: 4%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook, .fa-linkedin {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
 .description-text {
     height: 80%;
     font-size: 1.5em;
