--- a/assets/css/aboutstyle.css
+++ b/assets/css/aboutstyle.css
@@ -8,7 +8,7 @@
     width: 100%;
     display: flex;
     padding: 1.5%;
-    background-color: rgb(36, 31, 31);
+    background-color: #2D0406;
 }
 
 .navtab {
@@ -47,11 +47,12 @@
 .flex-container {
     display: flex;
     flex-direction: row;
-    width: 98%;
+    width: 100%;
     background-size: cover;
-    padding: 2%;
     background-color: white;
-    margin: 1%;
+    margin: 3.5% 0%;
+    border-top: 2px solid #E1D9CF;
+    border-bottom: 2px solid #E1D9CF;
 }
 
 .image-slot {
@@ -60,12 +61,10 @@
     align-items: center;
     width: 50%;
     padding: 2%;
-    background-color: silver;
-    border-radius: 5px 0px 0px 5px;
+    background-color: #F0ECE2;
 }
 
 .headshot {
-    border: 2px solid black;
     border-radius: 5px;
     width: auto;
     height: 600px;
@@ -77,9 +76,9 @@
     justify-content: center;
     width: 50%;
     background-color: white;
+    color: black;
     padding: 2%;
-    border: 4px solid silver;
-    border-radius: 0px 5px 5px 0px;
+    /* border: 4px solid #F0ECE2; */
 } 
 
 .text-slot p {
@@ -132,15 +131,17 @@
 @media screen and (max-width: 1074px) {
     .flex-container {
         flex-wrap: wrap;
+        border-top: 2px solid #E1D9CF;
     }
 
     .image-slot {
         width: 100%;
-        background-color: white;
+        border-bottom: 2px solid #E1D9CF;
     }
 
     .text-slot {
         width: 100%;
+        text-align: center;
     }
 }
 
@@ -148,9 +149,15 @@
     .headshot {
         height: 400px;
         width: 265px;
+        border-radius: 0px;
     }
 
-    .image-slot {
-        background-color: silver;
+    .text-slot p {
+        font-size: 0.9em;
+        padding: 3px;
+    }
+
+    .flex-container {
+        /* margin-top: 0%; */
     }
 }
