--- a/assets/css/contactstyle.css
+++ b/assets/css/contactstyle.css
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     padding: 1.5%;
-    background-color: rgb(36, 31, 31);
+    background-color: #2D0406;
 }
 
 .navtab {
