added basic form to contact page

--- a/assets/css/contactstyle.css
+++ b/assets/css/contactstyle.css
@@ -39,6 +39,27 @@
     color: white;
 }
 
+.my-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 80%;
+    margin: 1% 10%;
+    border: 1px solid rgb(201, 201, 201);
+    padding: 1.5%;
+    border-radius: 5px;
+}
+
+label {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 1em;
+    /* font-family: 'Lusitana', serif; */
+}
+
+.form-group {
+    padding: 0.25%;
+}
+
 @media screen and (max-width: 520px) {
     .header-nav {
         justify-content: center;
